--- a/packages/client/src/ui/global.css
+++ b/packages/client/src/ui/global.css
@@ -30,6 +30,6 @@ html {
   }
 
   &.simplebar-visible:before {
-    opacity: light-dark(0.4, 0.2);
+    opacity: 0.5 !important;
   }
 }
